--- a/v101/content/theorie.tex
+++ b/v101/content/theorie.tex
@@ -32,10 +32,10 @@ In diesem Versuch wird ein System betrachtet, bei welchem eine Drehachse über d
 um einen Winkel $\phi$ ausgelenkt wird. Ein Drehmoment $\vec{M}$ wird durch eine Kraftwirkung $\vec{F}$ entlang eines Kraftarms $\vec{r}$ senkrecht zur Drehachse bewirkt und 
 lässt sich über den Zusammenhang $\vec{M} = \vec{F} \times \vec{r}$ berechnen.
 Das beschriebene System ist ein Beispiel eines harmonischen Oszillators, dessen Differentialgleichung durch eine Schwingung mit der Schwingungsdauer 
-\begin{equation*}
+\begin{equation}
     \label{eqn:Schwingungsdauer}
     T = 2\pi \sqrt{\frac{I}{D}}
-\end{equation*}
+\end{equation}
 gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche der Federkonstante bei einer Translation entspricht. Aus dieser Gleichung lässt sich das Drehmoment 
 des Körpers --abzüglich des Eigendrehmoments $I_\text{D}$ der Drehachse selbst-- zu
 \begin{equation}
