--- a/v101/content/durchfuehrung.tex
+++ b/v101/content/durchfuehrung.tex
@@ -26,7 +26,7 @@ zu verschiedenen Abständen $r_{\text{Bsp}}$ berechnet. Dazu wird die Formel $M 
         \bottomrule 
     \end{tabular}
 \end{table}
-\subsection{Betimmung der Apparatkonstanten}
+\subsection{Experimentelle Bestimmung der Apparatkonstanten}
 \label{subsec:D_const}
 Zu Beginn werden die Winkelrichtgröße $D$ und das Eigenträgheitsmoment $I_D$ der Drill-Achse bestimmt. Dazu wird zunächst ein Stab durch die Drill-Achse gesteckt. Dann wird ein Newtonmeter, mit einem 
 Winkel von $90\unit{\degree}$, an dem Stab eingehängt. Die Drill-Achse wird nun mit dem Newtonmeter um $90\unit{\degree}$ gedreht. Dann wird die Kraft auf dem Newtonmeter abgelesen und notiert. Diese 
@@ -34,17 +34,17 @@ Messung wird mindestens zehn mal durchgeführt und die Ergebnisse danach gemitte
 bestimmt. Um das Eigenträgheitsmoment der Drill-Achse zu bestimmen werden zwei Gewichte in symetrischen Abständen an der Stange angebracht. Nun wird die Stange ausgelenkt, sodass sie schwingt.
 Dabei wird die Schwingungsdauer für mehrere Perioden gemessen und schließlich gemittelt. Diese Messung wird für mindestens zehn verschiedene Aufhängungen der Gewichte durchgeführt, wobei der Abstand
 der Gewichte zum Mittelpunkt ebenfalls notiert wird. Aus dieser Messung kann dan das Eigenträgheitsmoment bestimmt werden.
-\subsection{Bestimmung der Trägheitsmomente einfacher Körper}
+\subsection{Experimentelle Bestimmung der Trägheitsmomente einfacher Körper}
 \label{subsec:D_Körper}
 Es soll nun das Trägheitsmoment zweier einfacher Körper bestimmt werden. Dazu werden diese Körper zunächst gewogen und abgemessen. Dann werden die Körper auf der Drill-Achse angebracht. Nun werden
 die Körper um $90\unit{\degree}$ auf der Drill-Achse ausgelenkt. Es wird die Schwingungsdauer gemessen. Pro Körper werden fünf Messungen durchgeführt und die Ergebnisse werden gemittelt.
-\subsection{Bestimmung der Trägheitsmomente komplexer Körper}
+\subsection{Experimentelle Bestimmung der Trägheitsmomente komplexer Körper}
 \label{subsec:D_Figur}
 Zuletzt werden noch die Trägheitsmomente komplexerer Körper bestimmt. Dazu wird erneut eine Drill-Achse genutzt. Als komplexer Körper wird eine Holzpuppe verwendet. Diese ist in \autoref{fig:D_subfig} zu sehen.
 
 \begin{figure}
     \centering
-    \caption{Abbildung zur Bestimmung der Trägheitsmomente komplexer Körper:In dieser Abbildung ist eine Stellung der verwendete Holzpuppe auf der Drill-Achse zu sehen.}
+    \caption{Abbildung zur experimentellen Bestimmung der Trägheitsmomente komplexer Körper:In dieser Abbildung ist eine Stellung der verwendete Holzpuppe auf der Drill-Achse zu sehen.}
     \label{fig:D_subfig}
     \begin{subfigure}{0.48\textwidth}
         \centering
