--- a/v101/content/theorie.tex
+++ b/v101/content/theorie.tex
@@ -36,8 +36,8 @@ Das beschriebene System ist ein Beispiel eines harmonischen Oszillators, dessen 
     \label{eqn:Schwingungsdauer}
     T = 2\pi \sqrt{\frac{I}{D}}
 \end{equation}
-gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche der Federkonstante bei einer Translation entspricht. Aus dieser Gleichung lässt sich das Drehmoment 
-des Körpers --abzüglich des Eigendrehmoments $I_\text{D}$ der Drehachse selbst-- zu
+gelöst wird. $D$ ist dabei die Winkelrichtgröße (\textit{Direktionsmoment}), welche der Federkonstante bei einer Translation entspricht. Aus dieser Gleichung lässt sich das 
+Drehmoment des Körpers --abzüglich des Eigenträgheitsmoments $I_\text{D}$ der Drehachse selbst-- zu
 \begin{equation}
     \label{eqn:I_K}
     I_\text{K} = \frac{T^2}{4\pi^2}D - I_\text{D}
