Sexy Plot :fire: :airplane: , Bild verschoben

--- a/v101/content/auswertung.tex
+++ b/v101/content/auswertung.tex
@@ -130,6 +130,25 @@ $l_b = \qty{12.42}{\centi\metre}$, dem Radius $r_k = \qty{0.0082+-0.0010}{\centi
 Die Massen wurden bestimmt indem zunächst die Volumina der einzelnen Körperteile berechnet wurden. Da alle Körperteile als Zylinder genähert wurden können dieser Volumina mit $V = \pi r^2h$ berechnet werden.
 Daraus kann dann das Gessamtvolumen berechnet werden. Die einzelnen Massen wurden dann bestimmt indem der prozentuale Anteil des Volumens mit der Gesamtmasse multipliziert wurde.
 
+\begin{figure}
+  \centering
+  \caption{Abbildung zur experimentellen Bestimmung der Trägheitsmomente komplexer Körper:In dieser Abbildung ist eine Stellung der verwendete Holzpuppe auf der Drill-Achse zu sehen.}
+  \label{fig:D_subfig}
+  \begin{subfigure}{0.48\textwidth}
+      \centering
+      \caption{Stellung 1}
+      \label{fig:D_Holzpuppe1}
+      \includegraphics[width=0.6\textwidth]{content/Ballet3.jpg}
+  \end{subfigure}
+  \hfill
+  \begin{subfigure}{0.48\textwidth}
+      \centering
+      \caption{Stellung 2}
+      \label{fig:D_Holzpuppe2}
+      \includegraphics[width=0.8\textwidth]{content/T_Pose3.jpg}
+  \end{subfigure}    
+\end{figure}
+
 \subsubsection{Trägheitsmoment der ersten Stellung}
 \label{subsubsec:A_ballet}
 Die Stellung der Figur ist in \autoref{fig:D_Holzpuppe1} dargestellt. Zunächst werden die gemessenen Schwingungsdauern, welche dem Anhang entnommen werden können, der Figur in Stellung 1 gemittlet.
